force-app/main/default/objects/Car_Park__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional</fullName>
                <default>true</default>
                <label>Additional</label>
            </value>
            <value>
                <fullName>Earmarked</fullName>
                <isActive>false</isActive>
                <label>Earmarked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>