force-app/main/default/objects/Car_Park__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Car Park</relationshipLabel>
    <relationshipName>Car_Park</relationshipName>
    <type>Lookup</type>
</CustomField>