force-app/main/default/objects/Car_Park__c/fields/Inventory_Code__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Code__c</fullName>
    <label>Inventory Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>